<resources>
    <string name="app_name">Yummy</string>

    <string name="error_loading_recipe">Error loading a recipe or more</string>
    <string name="main_recipe_image_desc">Main Recipe Image</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>

    <bool name="isTablet">false</bool>
    <string name="title_activity_widget_dialog">WidgetDialogActivity</string>
    <string name="add_as_widget">Add as widget</string>
    <string name="show_one_recipe">Choose One of the recipes available</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
